fix z-index scroll button

--- a/src/scss/components/_scroll-to-top.scss
+++ b/src/scss/components/_scroll-to-top.scss
@@ -23,7 +23,7 @@ body {
   opacity: 0;
   transform: scale(0);
   cursor: pointer;
-
+  z-index:50;
   .icon {
     color: $clr-google;
   }
